--- a/public/index.html
+++ b/public/index.html
@@ -149,8 +149,8 @@
             pointer-events: none;
             z-index: 3;
             overflow: hidden;
-            filter: blur(0.5px);
-            /* Уменьшено размытие полицейской ленты с 1px до 0.5px */
+            filter: none;
+            /* Убираем размытие для лучшей читаемости */
         }
 
         .police-tape::before {
@@ -159,26 +159,35 @@
             top: 8%;
             left: 0;
             width: 300%;
-            height: 25px;
+            height: 28px;
+            /* Увеличена высота для лучшей читаемости */
             background: repeating-linear-gradient(45deg,
                     #FFD700 0px,
-                    #FFD700 10px,
-                    #FFA500 10px,
-                    #FFA500 20px);
-            color: #000;
+                    #FFD700 12px,
+                    #FFA500 12px,
+                    #FFA500 24px);
+            /* Увеличены полосы для лучшей видимости */
+            color: #000000;
+            /* Чисто черный цвет текста */
             font-family: 'JetBrains Mono', monospace;
-            font-size: 10px;
-            font-weight: bold;
-            line-height: 25px;
+            font-size: 11px;
+            /* Увеличен размер шрифта */
+            font-weight: 900;
+            /* Максимальная жирность */
+            line-height: 28px;
             text-align: left;
             letter-spacing: 2px;
             transform: rotate(-5deg);
             animation: tapeScroll 20s linear infinite;
-            opacity: 0.8;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3), inset 0 1px 0 rgba(255, 255, 255, 0.3);
-            border-top: 1px solid rgba(0, 0, 0, 0.2);
-            border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+            opacity: 0.9;
+            /* Увеличена непрозрачность */
+            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.4), inset 0 1px 0 rgba(255, 255, 255, 0.4);
+            /* Более контрастная тень */
+            border-top: 2px solid rgba(0, 0, 0, 0.3);
+            border-bottom: 2px solid rgba(0, 0, 0, 0.3);
             white-space: nowrap;
+            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.3);
+            /* Легкая белая тень для контраста */
         }
 
         .police-tape::after {
@@ -187,24 +196,32 @@
             bottom: 12%;
             right: 0;
             width: 300%;
-            height: 20px;
+            height: 24px;
+            /* Увеличена высота */
             background: repeating-linear-gradient(-45deg,
                     #DC143C 0px,
-                    #DC143C 8px,
-                    #8B0000 8px,
-                    #8B0000 16px);
-            color: #FFF;
+                    #DC143C 10px,
+                    #8B0000 10px,
+                    #8B0000 20px);
+            /* Увеличены полосы */
+            color: #FFFFFF;
+            /* Чисто белый цвет */
             font-family: 'JetBrains Mono', monospace;
-            font-size: 8px;
-            font-weight: bold;
-            line-height: 20px;
+            font-size: 9px;
+            /* Увеличен размер шрифта */
+            font-weight: 800;
+            /* Более жирный шрифт */
+            line-height: 24px;
             text-align: left;
             letter-spacing: 1px;
             transform: rotate(3deg);
             animation: tapeScroll 25s linear infinite reverse;
-            opacity: 0.7;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+            opacity: 0.85;
+            /* Увеличена непрозрачность */
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.5);
             white-space: nowrap;
+            text-shadow: 0 1px 3px rgba(0, 0, 0, 0.7);
+            /* Более контрастная черная тень */
         }
 
         @keyframes tapeScroll {
@@ -554,6 +571,29 @@
             margin-bottom: 12px;
             animation: glitchText 6s ease-in-out infinite;
             line-height: 1.1;
+            position: relative;
+        }
+
+        /* Специальные стили для слова "КРИМИНАЛЬНЫЙ" */
+        .title-criminal {
+            -webkit-text-stroke: 1px #000000;
+            /* Черная обводка 1px */
+            filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
+            /* Черная тень */
+            position: relative;
+        }
+
+        .title-criminal::before {
+            content: 'КРИМИНАЛЬНЫЙ';
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: var(--blood-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            -webkit-text-stroke: 2px #000000;
+            z-index: -1;
         }
 
         .subtitle {
@@ -1378,7 +1418,7 @@
 
         <!-- Главный заголовок -->
         <div class="main-title">
-            <h1 class="title">КРИМИНАЛЬНЫЙ<br>БЛЕФ</h1>
+            <h1 class="title"><span class="title-criminal">КРИМИНАЛЬНЫЙ</span><br>БЛЕФ</h1>
             <p class="subtitle">Найди след убийцы</p>
         </div>
 
