--- a/public/index.html
+++ b/public/index.html
@@ -576,24 +576,14 @@
 
         /* Специальные стили для слова "КРИМИНАЛЬНЫЙ" */
         .title-criminal {
-            -webkit-text-stroke: 1px #000000;
-            /* Черная обводка 1px */
-            filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.6));
-            /* Черная тень */
-            position: relative;
-        }
-
-        .title-criminal::before {
-            content: 'КРИМИНАЛЬНЫЙ';
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: var(--blood-gradient);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            -webkit-text-stroke: 2px #000000;
-            z-index: -1;
+            -webkit-text-stroke: 1.5px #000000;
+            /* Черная обводка */
+            text-shadow:
+                2px 2px 0px #000000,
+                4px 4px 8px rgba(0, 0, 0, 0.8),
+                6px 6px 12px rgba(0, 0, 0, 0.6),
+                8px 8px 16px rgba(0, 0, 0, 0.4);
+            /* Рассыпная черная тень */
         }
 
         .subtitle {
