Сделать мягкую обводку и тень для слова КРИМИНАЛЬНЫЙ

--- a/public/index.html
+++ b/public/index.html
@@ -576,14 +576,13 @@
 
         /* Специальные стили для слова "КРИМИНАЛЬНЫЙ" */
         .title-criminal {
-            -webkit-text-stroke: 1.5px #000000;
-            /* Черная обводка */
+            -webkit-text-stroke: 0.5px #000000;
+            /* Тонкая черная обводка */
             text-shadow:
-                2px 2px 0px #000000,
-                4px 4px 8px rgba(0, 0, 0, 0.8),
-                6px 6px 12px rgba(0, 0, 0, 0.6),
-                8px 8px 16px rgba(0, 0, 0, 0.4);
-            /* Рассыпная черная тень */
+                1px 1px 0px rgba(0, 0, 0, 0.8),
+                2px 2px 4px rgba(0, 0, 0, 0.5),
+                3px 3px 6px rgba(0, 0, 0, 0.3);
+            /* Мягкая тень */
         }
 
         .subtitle {
