Оставить только черную обводку букв без тени

--- a/public/index.html
+++ b/public/index.html
@@ -577,12 +577,7 @@
         /* Специальные стили для слова "КРИМИНАЛЬНЫЙ" */
         .title-criminal {
             -webkit-text-stroke: 0.5px #000000;
-            /* Тонкая черная обводка */
-            text-shadow:
-                1px 1px 0px rgba(0, 0, 0, 0.8),
-                2px 2px 4px rgba(0, 0, 0, 0.5),
-                3px 3px 6px rgba(0, 0, 0, 0.3);
-            /* Мягкая тень */
+            /* Тонкая черная обводка по контуру */
         }
 
         .subtitle {
