--- a/public/profile.html
+++ b/public/profile.html
@@ -1980,130 +1980,103 @@
     </div>
 
     <!-- Scripts -->
-    <script src="profile.js"></script>
-
-    <script>
-        // Инициализация Lucide иконок
-        document.addEventListener('DOMContentLoaded', () => {
-            if (typeof lucide !== 'undefined') {
-                lucide.createIcons();
+    <script type="module">
+        // Проверяем, что мы внутри Telegram WebApp
+        function checkTelegramAccess() {
+            if (!window.Telegram || !window.Telegram.WebApp) {
+                document.body.innerHTML = `
+                    <div style="
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        height: 100vh;
+                        background: linear-gradient(45deg, #000000, #1a0000, #330000);
+                        color: #F5F5DC;
+                        font-family: 'JetBrains Mono', monospace;
+                        text-align: center;
+                        padding: 20px;
+                    ">
+                        <div style="font-size: 64px; margin-bottom: 20px; color: #8B0000;">🚫</div>
+                        <h1 style="margin: 0 0 16px 0; font-size: 24px; color: #DC143C;">Доступ ограничен</h1>
+                        <p style="margin: 0 0 24px 0; font-size: 16px; opacity: 0.8; max-width: 400px;">
+                            Criminal Trust доступен только через официального Telegram бота.
+                        </p>
+                        <div style="
+                            background: linear-gradient(135deg, #8B0000, #DC143C);
+                            color: white;
+                            padding: 12px 24px;
+                            border-radius: 8px;
+                            text-decoration: none;
+                            display: inline-block;
+                            font-weight: bold;
+                            box-shadow: 0 8px 32px rgba(139, 0, 0, 0.5);
+                        ">
+                            🤖 Открыть в Telegram
+                        </div>
+                    </div>
+                `;
+                throw new Error('Доступ только через Telegram WebApp');
             }
+        }
 
-            // Создаем криминальные частицы
-            createCrimeParticles();
+        // Выполняем проверку сразу
+        checkTelegramAccess();
 
-            // Запускаем драматические эффекты
-            startCriminalEffects();
+        // Инициализируем Telegram WebApp
+        if (window.Telegram && window.Telegram.WebApp) {
+            window.Telegram.WebApp.ready();
+            window.Telegram.WebApp.expand();
+        }
 
-            // Обработчик кнопки назад
-            const backButton = document.getElementById('back-button');
-            if (backButton) {
-                backButton.addEventListener('click', (e) => {
-                    e.preventDefault();
+        // Инициализируем профиль после загрузки DOM
+        document.addEventListener('DOMContentLoaded', async () => {
+            try {
+                // Импортируем и инициализируем модуль профиля
+                const { CriminalTrustProfile } = await import('./profile.js');
 
-                    // Haptic feedback если доступен
-                    if (window.Telegram?.WebApp?.HapticFeedback) {
-                        window.Telegram.WebApp.HapticFeedback.impactOccurred('light');
-                    }
+                // Создаем экземпляр профиля
+                window.criminalProfile = new CriminalTrustProfile();
 
-                    // Возвращаемся на главный экран
-                    if (window.history.length > 1) {
-                        window.history.back();
-                    } else {
-                        // Fallback - переходим на главную страницу
-                        window.location.href = '/';
-                    }
-                });
+                console.log('✅ Профиль инициализирован');
+            } catch (error) {
+                console.error('❌ Ошибка инициализации профиля:', error);
+
+                // Показываем ошибку пользователю
+                document.body.innerHTML = `
+                    <div style="
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        height: 100vh;
+                        background: linear-gradient(45deg, #000000, #1a0000, #330000);
+                        color: #F5F5DC;
+                        font-family: 'JetBrains Mono', monospace;
+                        text-align: center;
+                        padding: 20px;
+                    ">
+                        <div style="font-size: 64px; margin-bottom: 20px; color: #DC143C;">⚠️</div>
+                        <h1 style="margin: 0 0 16px 0; font-size: 24px; color: #DC143C;">Ошибка загрузки</h1>
+                        <p style="margin: 0 0 24px 0; font-size: 16px; opacity: 0.8; max-width: 400px;">
+                            Не удалось загрузить данные профиля. Проверьте подключение к интернету.
+                        </p>
+                        <button onclick="window.location.reload()" style="
+                            background: linear-gradient(135deg, #8B0000, #DC143C);
+                            color: white;
+                            padding: 12px 24px;
+                            border: none;
+                            border-radius: 8px;
+                            font-weight: bold;
+                            cursor: pointer;
+                            box-shadow: 0 8px 32px rgba(139, 0, 0, 0.5);
+                        ">
+                            🔄 Перезагрузить
+                        </button>
+                    </div>
+                `;
             }
         });
-
-        function createCrimeParticles() {
-            const container = document.getElementById('crime-particles');
-            const particleCount = 50;
-
-            for (let i = 0; i < particleCount; i++) {
-                const particle = document.createElement('div');
-                particle.className = 'particle';
-
-                // Разнообразие частиц
-                const particleType = Math.random();
-                if (particleType < 0.3) {
-                    // Кровавые частицы
-                    particle.style.width = '2px';
-                    particle.style.height = '2px';
-                    particle.style.background = '#8B0000';
-                    particle.style.boxShadow = '0 0 3px #8B0000';
-                } else if (particleType < 0.5) {
-                    // Золотые улики
-                    particle.style.width = '3px';
-                    particle.style.height = '3px';
-                    particle.style.background = '#FFD700';
-                    particle.style.boxShadow = '0 0 4px #FFD700';
-                } else if (particleType < 0.7) {
-                    // Белые пылинки
-                    particle.style.width = '1px';
-                    particle.style.height = '1px';
-                    particle.style.background = 'rgba(255, 255, 255, 0.8)';
-                } else {
-                    // Красные неоновые
-                    particle.style.width = '2px';
-                    particle.style.height = '2px';
-                    particle.style.background = '#FF0040';
-                    particle.style.boxShadow = '0 0 3px #FF0040';
-                }
-
-                particle.style.left = Math.random() * 100 + '%';
-                particle.style.animationDelay = Math.random() * 15 + 's';
-                particle.style.animationDuration = (15 + Math.random() * 10) + 's';
-                container.appendChild(particle);
-            }
-
-            // Добавляем дополнительные эффекты каждые несколько секунд
-            setInterval(() => {
-                if (container.children.length > 70) return; // Ограничиваем максимальное количество
-
-                const extraParticle = document.createElement('div');
-                extraParticle.className = 'particle';
-                extraParticle.style.width = '1px';
-                extraParticle.style.height = '1px';
-                extraParticle.style.background = '#DC143C';
-                extraParticle.style.left = Math.random() * 100 + '%';
-                extraParticle.style.animationDuration = '10s';
-                container.appendChild(extraParticle);
-
-                // Удаляем через время
-                setTimeout(() => {
-                    if (extraParticle.parentNode) {
-                        extraParticle.parentNode.removeChild(extraParticle);
-                    }
-                }, 10000);
-            }, 4000); // Каждые 4 секунды добавляем новую частицу
-        }
-
-        function startCriminalEffects() {
-            // Случайные глитчи
-            setInterval(() => {
-                if (Math.random() < 0.15) {
-                    document.body.style.filter = 'hue-rotate(180deg) contrast(1.2)';
-                    setTimeout(() => {
-                        document.body.style.filter = '';
-                    }, 100);
-                }
-            }, 3000);
-
-            // Мерцание красных элементов
-            setInterval(() => {
-                const redElements = document.querySelectorAll('.rank-badge, .level-badge, .section-count');
-                redElements.forEach(el => {
-                    if (Math.random() < 0.2) {
-                        el.style.animation = 'none';
-                        setTimeout(() => {
-                            el.style.animation = '';
-                        }, 200);
-                    }
-                });
-            }, 5000);
-        }
     </script>
 </body>
 
